# AI-Hedge-Fund

./: README.md  pyproject.toml
deploy/: com.aihedgefund.safe-scan.plist
output/: discovery_selection.json  portfolio_decision.json  trade_decision.md
output/batch/: agro_discovery_selection.json  agro_portfolio_decision.json  agro_trade_decision.md  company_screen_summary.json  fdx_discovery_selection.json  fdx_portfolio_decision.json  fdx_trade_decision.md  saic_discovery_selection.json  saic_portfolio_decision.json  saic_trade_decision.md
output/cache/: company_screen_cache.json
scripts/: run_safe_scan.sh
src/ai_hedge_fund/: __init__.py  automation.py  crew.py  discovery.py  main.py  models.py  run_batch.py  safe_scan.py  screening.py
src/ai_hedge_fund.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_hedge_fund/config/: agents.yaml  tasks.yaml
src/ai_hedge_fund/tools/: __init__.py  custom_tools.py
src/crewai_github_template/: crew.py  main.py
src/crewai_github_template/tools/: __init__.py
tests/: test_automation.py  test_custom_tools.py  test_discovery.py  test_run_batch.py  test_safe_scan.py  test_screening.py
